# for-test

./: desktop.c  dpkg.c
desktop/: CMakeLists.txt  desktop.c  test.desktop
dfs/: dfs.c
dpkg/: CMakeLists.txt  dpkg.c
